Synchronize ETFileList pointer

Ensure that sorting ETCore->ETFileDisplayedList, and possibly changing
the head pointer, results in the ETCore->ETFileList pointer being
updated to the head of the list.

https://bugzilla.gnome.org/show_bug.cgi?id=755069